.opsera-sri-1/k8s/base/service.yaml
# =============================================================================
# Kubernetes Service for sri-1
# Generated by Opsera Code-to-Cloud v0.6
# =============================================================================
apiVersion: v1
kind: Service
metadata:
  name: sri-1
  labels:
    app: sri-1
spec:
  type: ClusterIP
  selector:
    app: sri-1
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
